# Engine-Combustion-Simulation

./: .gitignore  README.md  pyproject.toml  requirements.txt  verify_all.sh
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  architecture_doc.md  quickstart.md
examples/: README.md  example_script.py
src/: README.md
src/engine_simulator/: __main__.py  engine_config.py  kinematics.py  multi_cylinder_simulator.py  single_cylinder_simulator.py  thermodynamics.py  utilities.py  visualization.py
tests/: README.md  test_kinematics.py  test_property_based.py  test_thermodynamics.py  validation_scientific.py
